Do preliminary switch to local definition of FileUploadBox
